@@ -4310,6 +4310,14 @@ receives a corresponding keyword argument (&verbose-k;, &print-k;,
 are recursive, just like the arguments &warnings-k;, &verbose-k;, and
 &print-k; for &compile-file;.</para>
 
+<para>When evaluation of a read form &sig-err;, two restarts are
+ available:<variablelist><varlistentry><term><literal>SKIP</literal></term>
+   <listitem><simpara>Skip this form and read the next one.
+  </simpara></listitem></varlistentry>
+  <varlistentry><term><literal>STOP</literal></term>
+   <listitem><simpara>Stop loading the file.
+</simpara></listitem></varlistentry></variablelist></para>
+
 <formalpara id="load-paths"><title>Variable &load-paths;</title>
 <para>The variable &load-paths; contains a list of directories where the
  files are looked for - in addition to the specified or current
